MonetDB/src/mal/Tests/tst120.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
##define 2 modules and check location of routines
#
#use tst120a;	# lookup DBHOME/mal/tst120a.mal
#use tst120b;
#use tst120a;	# does not do anything
#
#a:= second("hh");
#b:= first(1);
#c:= first(1:sht);
#d:= first("hello world");
#e:= top.first(2:sht);
#
!ERROR: malImport: could not open file: tst120a
!ERROR: malImport: could not open file: tst120b
!ERROR: malImport: could not open file: tst120a
!ERROR: 'second' undefined in Admin.main[1]
!ERROR: 'first' undefined in Admin.main[2]
!ERROR: 'first' undefined in Admin.main[3]
!ERROR: 'first' undefined in Admin.main[4]
!ERROR: 'top.first' undefined in Admin.main[5]
function Admin.main():int;	#0:(main:int)
	a := second("hh");	#1 unknown:(a:any)<-($2:str)
	b := first(1);	#2 unknown:(b:any)<-($4:int)
	c := first(1);	#3 unknown:(c:any)<-($6:sht)
	d := first("hello world");	#4 unknown:(d:any)<-($8:str)
	e := top.first(2);	#5 unknown:(e:any)<-($10:sht)
end function;	#6:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors
>